<resources>
    <string name="app_name">ViSVeggie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gpu">GPU</string>
    <string name="gpu_acceleration">GPU Acceleration</string>
    <string name="live_detection">Live Detection</string>
    <string name="home">Home</string>
    <string name="classification">Classify</string>
    <string name="detection">Detection</string>
    <string name="items">Resources</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="select_language">Select Language</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="change_model">Change Model</string>
    <string name="select_model">Select Model</string>
    <string name="refresh">Refresh</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="close">Close</string>
    <string name="model_config">Model Configuration</string>
    <string name="save">Save</string>
    <string name="inference_time">Inference Time: </string>
    <string name="confidence_threshold">Confidence Threshold</string>
    <string name="numberDetection">Number of Detection</string>
    <string name="prediction">Prediction:</string>
    <string name="read_more">Read More</string>
    <string name="image_classification">Image Classification</string>
    <string name="cultivation_guide">Cultivation Guide</string>
    <string name="search">Search</string>
    <string name="science_name">Scientific name:</string>
    <string name="description">Description +</string>
    <string name="cultivar">Cultivar</string>
    <string name="landscape">Landscape</string>
    <string name="plant_propagate">Plant Propagate</string>
    <string name="planting">Planting</string>
    <string name="plant_caring">Plant Caring</string>
    <string name="harvest">Harvest</string>
    <string name="err_pick_item">Please pick fruit or vegetable to continue</string>
    <string name="err_search_not_found">No result found</string>
    <string name="err_search_empty">Please enter the plant name</string>
    <string name="cultivate_type">Cultivation type</string>
    <string name="add_content">Add Content</string>
    <string name="plant">Plant</string>
    <string name="content_nameEn">Content name for English</string>
    <string name="content_nameVi">Content name for Vietnamese</string>
    <string name="content_descriptionEn">Content description for English</string>
    <string name="content_descriptionVi">Content description for Vietnamese</string>
    <string name="choose_image">Choose an image</string>
    <string name="image_picked">Image is picked</string>
    <string name="err_insert_contentNameExist">Content name in English already exists</string>
    <string name="err_insert_contentNameViExist">Content name in Vietnamese already exists</string>
    <string name="duplicate_entryContent">Duplicate entry for content</string>
    <string name="invalid_referenceContent">Invalid reference to Item or Cultivate ID</string>
    <string name="constraint_violation">Constraint violation</string>
    <string name="more">More</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="chooseAction">Choose an action</string>
    <string name="savingContent">Saving content, please wait...</string>
    <string name="saveContentSuccess">Save content successfully</string>
    <string name="saveContentFail">Save content failed</string>
    <string name="errCbb">Please choose Cultivate type and Plant</string>
    <string name="errNameEn">Please enter content name in English</string>
    <string name="errNameVi">Please enter content name in Vietnamese</string>
    <string name="errDescriptionEn">Please enter content description in English</string>
    <string name="errDescriptionVi">Please enter content description in Vietnamese</string>
    <string name="errImage">Please choose an image</string>
    <string name="errHtml">Please enter content</string>
    <string name="selectPicture">Select Picture</string>
    <string name="choose_cultivate">Choose Cultivate type</string>
    <string name="choose_plant">Choose Plant</string>
    <string name="delete_content">Delete Content</string>
    <string name="warnDelete">Are you sure you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="from">from</string>
    <string name="delContentStorage">Delete content from storage</string>
    <string name="delContentDb">Delete content from database</string>
    <string name="delContentSuccess">Delete content successfully</string>
    <string name="delHistorySuccess">Delete history successfully</string>
    <string name="insertContentHere">Insert content here</string>
    <string name="modify_content">Modify Content</string>
    <string name="feature">Advanced features</string>
    <string name="filter">Filter detection</string>
    <string name="historyClassification">History recognition</string>
    <string name="model">Model</string>
    <string name="confidence">Confidence</string>
    <string name="del_history">Delete History</string>
    <string name="this_image">this image</string>
    <string name="support">Support</string>
    <string name="reportBug">Report a bug</string>
    <string name="requestFeature">Request a feature</string>
    <string name="contactMe">Contact me</string>
    <string name="delContentFail">Delete content failed</string>
    <string name="community">Community</string>
    <string name="add_post">Add Post</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="favorite">Favorite</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout">Logout</string>
    <string name="login_success">Login successfully</string>
    <string name="signing_in">Signing in...</string>
    <string name="err_addpost_login">Please login to add post</string>
    <string name="post_desc">Write a content about your plant.</string>
    <string name="savingPost">Saving post, please wait...</string>
    <string name="errDescription">Please enter the description</string>
    <string name="post_saved">Post saved successfully</string>
    <string name="login_required">Login required</string>
    <string name="write_comment">Write a comment</string>
    <string name="all_comments">All comments</string>
    <string name="err_comment">Comment cannot be empty</string>
    <string name="add_comment_success">Add comment successfully</string>
    <string name="add_comment_fail">Failed to add comment</string>
    <string name="adding_comment">Adding comment...</string>
    <string name="del_comment_success">Delete comment successfully</string>
    <string name="deleting_comment">Deleting comment...</string>
    <string name="my_post">My Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_post_confirm">Are you sure you want to delete this post?</string>
    <string name="deleling_post">Deleting post...</string>
    <string name="post_deleted">Post deleted successfully</string>
    <string name="image_quality">Image Quality</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
</resources>