<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.ViewPostsActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/arrow_back_icon"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            app:tint="@color/black"
            android:contentDescription="Return" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community"
            android:fontFamily="@font/bevietnampro_medium"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
            android:src="@drawable/user" />

    </RelativeLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbMyPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:layout_marginStart="12dp"
        android:textSize="14sp"
        android:fontFamily="@font/bevietnampro_regular"
        android:text="@string/my_post"
        android:textColor="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_rv"
        android:layout_below="@+id/cbMyPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/emerald"
        android:contentDescription="@string/add_post"
        android:src="@drawable/add_post_icon"
        app:fabCustomSize="60dp"
        app:maxImageSize="30dp"
        app:tint ="#FFFFFF"/>

</RelativeLayout>
